IntelliJ Inspect Code for JUnit tests