@@ -1,12 +1,6 @@
 package storage;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -20,6 +14,10 @@ import task.Task;
 import task.TaskList;
 import task.Todo;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+
 public class TaskListDecoderTest {
     
     private List<String> encodedTasks;
@@ -27,24 +25,24 @@ public class TaskListDecoderTest {
 
     @Test
     public void decodeTaskList_validTodo_decodesSuccessfully() throws Exception {
-        encodedTasks = Arrays.asList("T | 0 | learn magic");
+        encodedTasks = List.of("T | 0 | learn magic");
         decodedTasks = TaskListDecoder.decodeTaskList(encodedTasks);
 
         assertEquals(1, decodedTasks.getSize());
         Task task = decodedTasks.getTask(0);
-        assertTrue(task instanceof Todo);
+        assertInstanceOf(Todo.class, task);
         assertEquals("learn magic", task.getDescription());
         assertFalse(task.getIsDone());
     }
 
     @Test
     public void decodeTaskList_validDeadline_decodesSuccessfully() throws Exception {
-        encodedTasks = Arrays.asList("D | 0 | prepare for presentation | Oct 10 2024 1000");
+        encodedTasks = List.of("D | 0 | prepare for presentation | Oct 10 2024 1000");
         decodedTasks = TaskListDecoder.decodeTaskList(encodedTasks);
 
         assertEquals(1, decodedTasks.getSize());
         Task task = decodedTasks.getTask(0);
-        assertTrue(task instanceof Deadline);
+        assertInstanceOf(Deadline.class, task);
         assertEquals("prepare for presentation", task.getDescription());
         assertFalse(task.getIsDone());
         assertEquals(LocalDateTime.of(2024, 10, 10, 10, 0), ((Deadline) task).getDue());
@@ -52,12 +50,12 @@ public class TaskListDecoderTest {
 
     @Test
     public void decodeTaskList_validEvent_decodesSuccessfully() throws Exception {
-        encodedTasks = Arrays.asList("E | 0 | networking lunch | Sep 11 2024 1200 | Sep 11 2024 1400");
+        encodedTasks = List.of("E | 0 | networking lunch | Sep 11 2024 1200 | Sep 11 2024 1400");
         decodedTasks = TaskListDecoder.decodeTaskList(encodedTasks);
 
         assertEquals(1, decodedTasks.getSize());
         Task task = decodedTasks.getTask(0);
-        assertTrue(task instanceof Event);
+        assertInstanceOf(Event.class, task);
         assertEquals("networking lunch", task.getDescription());
         assertFalse(task.getIsDone());
         assertEquals(LocalDateTime.of(2024, 9, 11, 12, 0), 
@@ -68,10 +66,8 @@ public class TaskListDecoderTest {
 
     @Test
     public void decodeTaskList_emptyTask_throwsException() {
-        encodedTasks = Arrays.asList(Constants.EMPTY_STRING);
-        FileContentException exception = assertThrows(FileContentException.class, () -> {
-            TaskListDecoder.decodeTaskList(encodedTasks);
-        });
+        encodedTasks = List.of(Constants.EMPTY_STRING);
+        FileContentException exception = assertThrows(FileContentException.class, () -> TaskListDecoder.decodeTaskList(encodedTasks));
 
         assertEquals(
             String.format("%s. %s.", Messages.MESSAGE_EMPTY_LINE, Messages.MESSAGE_INVALID_TASKS_DATA), 
@@ -81,10 +77,8 @@ public class TaskListDecoderTest {
 
     @Test
     public void decodeTaskList_invalidFormat_throwsException() {
-        List<String> encodedTasks = Arrays.asList("T | 0");
-        Exception exception = assertThrows(FileContentException.class, () -> {
-            TaskListDecoder.decodeTaskList(encodedTasks);
-        });
+        List<String> encodedTasks = List.of("T | 0");
+        Exception exception = assertThrows(FileContentException.class, () -> TaskListDecoder.decodeTaskList(encodedTasks));
 
         assertEquals(
             String.format("%s. %s.", Messages.MESSAGE_TASK_MISSING_COMPONENTS, Messages.MESSAGE_INVALID_TASKS_DATA),
@@ -94,10 +88,8 @@ public class TaskListDecoderTest {
 
     @Test
     public void decodeTaskList_unknownTaskType_throwsException() {
-        List<String> encodedTasks = Arrays.asList("X | 0 | unknown task");
-        Exception exception = assertThrows(FileContentException.class, () -> {
-            TaskListDecoder.decodeTaskList(encodedTasks);
-        });
+        List<String> encodedTasks = List.of("X | 0 | unknown task");
+        Exception exception = assertThrows(FileContentException.class, () -> TaskListDecoder.decodeTaskList(encodedTasks));
 
         assertEquals(
             "Error: Unknown task type.",
@@ -107,10 +99,8 @@ public class TaskListDecoderTest {
 
     @Test
     public void decodeTaskList_invalidCompletionStatus_throwsException() {
-        List<String> encodedTasks = Arrays.asList("T | 2 | invalid status task");
-        Exception exception = assertThrows(FileContentException.class, () -> {
-            TaskListDecoder.decodeTaskList(encodedTasks);
-        });
+        List<String> encodedTasks = List.of("T | 2 | invalid status task");
+        Exception exception = assertThrows(FileContentException.class, () -> TaskListDecoder.decodeTaskList(encodedTasks));
 
         assertEquals(
             "Task has invalid completion status",
